<resources>
    <string name="app_name">NewsApp</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="published_text">Published At :</string>
    <string name="author"> Author :</string>
    <string name="content">content</string>
    <string name="description_text">Descritpion :</string>
    <string name="no_data">Now Article in Favourite !</string>
    <string name="search">Search...</string>
    <string name="no_result">"No Result for your  Search "</string>
    <string name="newsApp">News App</string>
    <string name="search_fragment">Search For Topic</string>
    <string name="favourite_fragment">Favourite Article</string>
    <string name="details_fragment">Article Details</string>
</resources>